[package]
name = "mock-logind"
version = "0.2.2"
edition = "2021"
description = "Systemd D-Bus API mock in a block"
authors = ["Balena Inc. <hello@balena.io>"]
repository = "https://github.com/balena-os/mock-systemd-bus/"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
log = "0.4.19"
serde = "1.0.175"
stderrlog = "0.5.4"
zbus = "3.14.1"

[profile.release]
opt-level = "z"
codegen-units = 1
